--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,8 +8,8 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
-
+# play.crypto.secret = "changeme"
+play.crypto.secret = "2m4r`DFDhke3xfw3nYOJgmOf^6Bqs4UXD6:yUQBpi/l;S<]jyTJx1g^g=<oDa8aV"
 # The application languages
 # ~~~~~
 play.i18n.langs = [ "en" ]
